--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -99,7 +99,7 @@
     <a href="javascript:void(0)" class="util-nav-link goDark">Dark Mode</a>
     <input type="checkbox" id="ham" class="hiddenCB" ><label class="hamb-label" for="ham"></label>
     <div class="ham-links">
-      <img src="{{ 'sp-logo-white.svg' | asset_url }}" alt="SaunaSpace Logo" class="cssclass1 cssclass2" id="logo">
+      <img src="{{ 'sp-logo-white.svg' | asset_url }}" alt="SaunaSpace Logo" class="cssclass1 cssclass2" id="logo"  loading="lazy"/>
       <a href="/reviews" class="ham-link nav-link-arrow">Reviews</a>
       <a href="/100-day-home-trial" class="ham-link nav-link-arrow">100 Day Home Trial</a>
       <a href="/financing" class="ham-link nav-link-arrow">Financing</a>
