--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -36,14 +36,14 @@
                 <h2>Targeted Therapy</h2>
                 <div class="bold-link bold-link-white arrow-link">Explore</div>
             </div>
-            <img src="{{ 'home-targeted-therapy.jpg' | asset_url }}" alt="" />
+            <img src="{{ 'home-targeted-therapy.jpg' | asset_url }}" alt="" loading="lazy" />
         </a>
         <a href="/sauna-components" class="three-panel">
             <div class="three-panel-inset-text">
                 <h2>Sauna Components</h2>
                 <div class="bold-link bold-link-white arrow-link">Explore</div>
             </div>
-            <img src="{{ 'home-sauna-components.jpg' | asset_url }}" alt="" />
+            <img src="{{ 'home-sauna-components.jpg' | asset_url }}" alt="" loading="lazy" />
         </a>
     </div>
 </section>
@@ -117,8 +117,8 @@
 <h2>Our Customers Love Us</h2>
 <div class="rc-arrows">
 
-    <img src="{{ 'arrow_orange.svg' | asset_url }}" class="rc-arrow-right" alt="" onClick="scrollReviews(1);" />
-    <img src="{{ 'arrow_orange.svg' | asset_url }}" class="rc-arrow-left" alt="" onClick="scrollReviews(-1);" />
+    <img src="{{ 'arrow_orange.svg' | asset_url }}" class="rc-arrow-right" alt="" onClick="scrollReviews(1);"  loading="lazy" />
+    <img src="{{ 'arrow_orange.svg' | asset_url }}" class="rc-arrow-left" alt="" onClick="scrollReviews(-1);" loading="lazy" />
     <div class="review-carousel">
 
     <div class="rc-box">
