--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -17,7 +17,7 @@
 	<section>
 		<div class="footer">
 			<div class="footer-info">
-				<img src="{{ 'sp-logo-white.svg' | asset_url }}" alt="Sauna Space logo" class="footer-logo" />
+				<img src="{{ 'sp-logo-white.svg' | asset_url }}" alt="Sauna Space logo" class="footer-logo" loading="lazy" />
 				<div class="cl-box"><a href="tel:15736672862" class="contact-link cl-phone">+1 573-667-2862</a></div>
 				<div class="cl-box"><a href="mailto:hello@sauna.space" class="contact-link cl-email">hello@sauna.space</a></div>
 				<div class="cl-box"><a onclick="GorgiasChat.open()" class="contact-link cl-chat">Live Chat</a></div>
