--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -124,7 +124,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/chris-kresser.jpg" alt="Chris Kresser" loading="lazy" />
+            <img src="{{ 'chris-kresser.jpg' | asset_url }}" alt="Chris Kresser" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Chris Kresser</div>
                 <div class="review-title etica">M.S., L.Ac, Founder of Kresser Institute</div>
@@ -137,7 +137,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/harrison-butker.jpg" alt="Harrison Butker" loading="lazy" />
+            <img src="{{ 'harrison-butker.jpg' | asset_url }}" alt="Harrison Butker" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Harrison Butker</div>
                 <div class="review-title etica">NFL Super Bowl Champion</div>
@@ -149,7 +149,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/ragga-ragnars.jpg" alt="Ragga Ragnars" loading="lazy" />
+            <img src="{{ 'ragga-ragnars.jpg' | asset_url }}" alt="Ragga Ragnars" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Ragga Ragnars</div>
                 <div class="review-title etica">Olympic Swimmer, Actor</div>
@@ -161,7 +161,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/terri-hirning.jpg" alt="Terri Hirning" loading="lazy" />
+            <img src="{{ 'terri-hirning.jpg' | asset_url }}" alt="Terri Hirning" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Terri Hirning</div>
                 <div class="review-title etica">Author</div>
@@ -173,7 +173,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/margaret-c.jpg" alt="Margaret C" loading="lazy" />
+            <img src="{{ 'margaret-c.jpg' | asset_url }}" alt="Margaret C" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Margaret C.</div>
                 <div class="review-title etica">Verified Buyer</div>
@@ -185,7 +185,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/terry-wahls.jpg" alt="Terry Wahls" loading="lazy" />
+            <img src="{{ 'terry-wahls.jpg' | asset_url }}" alt="Terry Wahls" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Terry Wahls</div>
                 <div class="review-title etica">MD, Founder of The Wahls Protocol</div>
@@ -197,7 +197,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/nicole-moneer.jpg" alt="Nicole Moneer" loading="lazy" />
+            <img src="{{ 'nicole-moneer.jpg' | asset_url }}" alt="Nicole Moneer" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Nicole Moneer</div>
                 <div class="review-title etica">Verified Buyer</div>
@@ -211,7 +211,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/jeannie-z.jpg" alt="Jeannie Z." loading="lazy" />
+            <img src="{{ 'jeannie-z.jpg' | asset_url }}" alt="Jeannie Z." loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Jeannie Z.</div>
                 <div class="review-title etica">Verified Buyer</div>
@@ -223,7 +223,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/david-l.jpg" alt="David L" loading="lazy" />
+            <img src="{{ 'david-l.jpg' | asset_url }}" alt="David L" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">David L.</div>
                 <div class="review-title etica">Verified Buyer</div>
@@ -235,7 +235,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/v-capaldi.jpg" alt="V. Capaldi" loading="lazy" />
+            <img src="{{ 'v-capaldi.jpg' | asset_url }}" alt="V. Capaldi" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">V. Capaldi</div>
                 <div class="review-title etica">MS Warrior, TEDx Speaker
@@ -248,7 +248,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/tiphany-adams.jpg" alt="Tiphany Adams" loading="lazy" />
+            <img src="{{ 'tiphany-adams.jpg' | asset_url }}" alt="Tiphany Adams" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Tiphany Adams</div>
                 <div class="review-title etica">Fitness Coach
@@ -261,7 +261,7 @@
     <div class="rc-box">
         <div class="rcb-name">
             
-            <img src="/assets/bella-c.jpg" alt="Bella C" loading="lazy" />
+            <img src="{{ 'bella-c.jpg' | asset_url }}" alt="Bella C" loading="lazy" />
             <div class="rcb-text">
                 <div class="review-name">Bella C.</div>
                 <div class="review-title etica">Verified Buyer
