--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -183,7 +183,7 @@
         {%- endif -%}
       </media-gallery>
     </div>
-    <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
+    <div class="product__info-wrapper product-text grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
       <div id="ProductInfo-{{ section.id }}" class="product__info-container{% if section.settings.enable_sticky_info %} product__info-container--sticky{% endif %}">
         {%- assign product_form_id = 'product-form-' | append: section.id -%}
 
@@ -476,11 +476,50 @@
               </p>
             {%- endif -%}
           {%- endcase -%}
+         
+				
         {%- endfor -%}
+<div class="op-30day">
+							<div><strong>Order Processing:</strong>  1–4 days.</div>
+							<div>30-Day Returns</div>
+						</div>
+				<div class="pay-over-time">
+					<div class="pot-head">Pay Over Time</div>
+					<div class="pot-col">
+						<img src="{{ 'splitit.svg' | asset_url }}" width="60" alt="SplitIt" loading="lazy" />
+						<span data-ml="splitItSummary">Monthly payments using your credit card. 0% interest.</span>
+						<a href="javascript:void(0)" onClick="potMore('splitit')">Learn More</a>
+					</div>
+					<div class="pot-divider"></div>
+					<div class="pot-col">
+						<img src="{{ 'bread.png' | asset_url }}" width="60" alt="Bread Financing" loading="lazy" />
+						<span data-ml="breadSummary">Simple loan with monthly payments as low as 0% APR for 6 months.*</span>
+						<a href="javascript:void(0)" onClick="potMore('bread')">Learn More</a>
+					</div>
+					<div class="pot-col-100 hideMe" id="splititCol">
+						<a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy"  /></a>
+						<img src="{{ 'splitit.svg' | asset_url }}" width="70" alt="SplitIt" loading="lazy" />
+						<span data-ml="splitItText"><ul><li>0% interest</li><li>Monthly payments on your existing credit card</li><li>Keep earning rewards from your credit card</li><li>No credit check needed to qualify</li><li>Choose from 2-12 month payment plans.</li></ul></span>
+						<p class="fineprint">You can choose this option at checkout.</p>
+					</div>
+					<div class="pot-col-100 hideMe" id="breadCol">
+						<a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy" /></a>
+						<img src="{{ 'bread.png' | asset_url }}" width="70" alt="Bread Financing" loading="lazy"/>
+						<span data-ml="breadText"><ul><li>Starting at 0% APR for 6 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Subject to approval of credit application. Rates range from 0% to 29.99% APR, resulting in, for example, 24 monthly payments of $46.14 at 9.99% APR, per $1,000 borrowed. APRs will vary depending on credit qualifications, loan amount, and term. Bread<sup>®</sup>&nbsp;pay-over-time plans are loans made by Comenity Capital Bank.</p></span>
+						<p class="fineprint">Check your eligibility in minutes at checkout.</p>
+					</div>
+				</div>		
       </div>
     </div>
   </div>
-
+<section>
+  {%- if product.description != blank -%}
+		<div class="pcDescription">       
+             {{ product.description }}          
+	
+			</div>
+        {%- endif -%}
+	</section>
   <product-modal id="ProductModal-{{ section.id }}" class="product-media-modal media-modal">
     <div class="product-media-modal__dialog" role="dialog" aria-label="{{ 'products.modal.label' | t }}" aria-modal="true" tabindex="-1">
       <button id="ModalClose-{{ section.id }}" type="button" class="product-media-modal__toggle" aria-label="{{ 'accessibility.close' | t }}">{% render 'icon-close' %}</button>
@@ -566,6 +605,11 @@
 {% endif %}
 
 <script>
+
+  function potMore(f) {
+	$(".pot-col").addClass("hideMe");
+	$("#" + f + "Col").removeClass("hideMe");
+}
   document.addEventListener('DOMContentLoaded', function() {
     function isIE() {
       const ua = window.navigator.userAgent;
